# QmlVisualizationPlayground

./: .gitignore  1D_line-plot.qml  README.md
Benchmarks/1D_LineSeries/: 1D_line-plot_5000-points-with-append-useOpenGl.qml  Project.qmlproject  README.md
Benchmarks/1D_LineSeries_5000points/: README.md
Benchmarks/1D_LineSeries_5000points/Python-model/: Main.py
Benchmarks/1D_LineSeries_5000points/QtCharts-append-model/: Main.qml
Benchmarks/1D_LineSeries_5000points/QtCharts_Cpp-model/: Main.cpp  Main.pro  (+1 more)
Benchmarks/QStandardItemModel/: Main.py  Main.qml
Benchmarks/SimpleDurationCheck/: chart.qml  project.qmlproject
ChartsJs/: Project.qmlproject  Test.qml
Examples/1D/: 1D_line-plot_with-error-bars_v1.qml
Performance/1D_LineSeries/: 1D_line-plot_5000-points-with-XYPoint-useOpenGL.qml  1D_line-plot_5000-points-with-XYPoint.py  1D_line-plot_5000-points-with-XYPoint.qml  1D_line-plot_5000-points-with-XYPoint_int-data.qml  1D_line-plot_5000-points.qml  README.md
QChartJs/: README.md
QChartJs/1D/: 1D_line-plot.qml  QChartData.js
QChartJs/Gallery/: Project.qmlproject
QmlChartJs/: README.md
QmlChartJs/1D/: 1D_line-plot.qml
QtChartJs/: README.md
QtChartJs/1D/: Project.qmlproject  Test.qml
QtCharts/1D/: 1D_histogram-plot_with-error-bars_v1.qml  1D_line-plot_with-error-area.qml  Project.qmlproject
QtDataVisualization/1D/: Comparison.qml
QtDataVisualization/3D/: Comparison.qml  Project.qmlproject
QtDataVisualization/QtExamples/: readme.txt
VtkQml/: CMakeLists.txt  cpp.pro  main.cpp  main.qml  readme.txt  vtkglut.cpp  vtkqml.cpp  vtkqml.h
(+33 files in other folders)
